--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -9,22 +9,87 @@
 .bottom-portion {
   display: flex;
   justify-content: space-between;
-  margin: 0 6rem;
+
   .next-buttons {
-    margin: 1rem 11rem 0 0;
+    margin: 1rem 7rem 0 3rem;
+    text-align: center;
+    width: 30%;
   }
   .proceed-info {
+    text-align: center;
+    width: 50%;
     color: #fff;
+  }
+}
+
+@media (max-width: 1242px) {
+  .bottom-portion {
+    .next-buttons {
+      margin-right: 13%;
+    }
+
+    .proceed-info {
+      margin-left: 1rem;
+    }
+  }
+}
+
+@media (max-width: 989px) {
+  .home-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2rem;
+
+    .calendar-container {
+      width: 100%;
+    }
+  }
+
+  .bottom-portion {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+
+    .next-buttons {
+      text-align: end;
+      margin-left: 14rem;
+      margin-bottom: 2rem;
+    }
+
+    .proceed-info {
+    }
   }
 }
 
 @media (max-width: 440px) {
   .home-container {
+    overflow-x: hidden;
     display: flex;
     flex-direction: column;
     .calendar-container {
       width: 100%;
       padding: 0;
+    }
+  }
+
+  .bottom-portion {
+    display: flex;
+    flex-direction: column;
+    margin: 0 2rem;
+    .next-buttons {
+      width: 100%;
+      margin: 0;
+      margin: 1rem 0 1rem 0;
+      text-align: end;
+    }
+
+    .proceed-info {
+      width: 100%;
+      margin: 0;
+      margin-top: 1rem;
     }
   }
 }
