--- a/src/pages/MakeAppointment.scss
+++ b/src/pages/MakeAppointment.scss
@@ -1,3 +1,14 @@
 .stepper-container {
   margin-top: 3rem;
 }
+
+.user-info {
+  margin: 4rem 0 0 18rem;
+  .text-row {
+    color: #fff;
+
+    .text-label {
+      color: #888888;
+    }
+  }
+}
